--- a/eternal/index.html
+++ b/eternal/index.html
@@ -37,6 +37,22 @@
         <div id="calendarBox">
             <div class="calendarLeft">
                 <h3>현금.체크카드.계좌</h3>
+                
+                <div class="detail_box cash_check">
+                    <div class="detail_head">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <div class="detail_write">
+
+                    </div>
+                    <div class="detail_list">
+
+                    </div>
+                </div>
+
                 <table class="cldTable cleft">
                     <thead><tr>
                         <th class="date">일자</th>
@@ -163,6 +179,17 @@
             </div>
             <div class="calendarRight">
                 <h3>신용카드-일시불</h3>
+                <div class="detail_box credit_dir">
+                    <div class="detail_head">
+
+                    </div>
+                    <div class="detail_write">
+
+                    </div>
+                    <div class="detail_list">
+
+                    </div>
+                </div>
                 <table class="cldTable creditFull">
                     <thead><tr>
                         <th class="date">일자</th>
