--- a/eternal/index.html
+++ b/eternal/index.html
@@ -40,10 +40,10 @@
                 
                 <div class="detail_box cash_check">
                     <div class="detail_head">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <div>일자</div>
+                        <div>내역</div>
+                        <div>지출<b class="text-danger expense_simbol">-</b>,수입<b class="text-info incom_simbol">+</b></div>
+                        <div>결제방법</div>
                     </div>
                     <div class="detail_write">
 
