--- a/eternal/old/index.html
+++ b/eternal/old/index.html
@@ -36,7 +36,7 @@
     <div id="content">
         <div id="calendarBox">
             <div class="calendarLeft">
-                <h3 id="cashCheck">현금.체크카드.계좌</h3>
+                <h3>현금.체크카드.계좌</h3>
                 
                 <div class="detail_box cash_check">
                     <div class="detail_head">
@@ -45,13 +45,34 @@
                         <div class="fluctuate">지출<b class="text-danger expense_simbol">-</b>,수입<b class="text-info incom_simbol">+</b></div>
                         <div class="payment">결제방법</div>
                     </div>
-                    
+                    <div class="detail_write">
+                        <div class="date dateTd dateInput">
+                            <input type="number" th:field="*{date}">
+                        </div>
+                        <div class="detail detailTd detailInput">
+                            <input type="text" th:field="*{detail}">
+                        </div>
+                        <div class="expense expenseTd expenseInput">
+                            <input type="number" th:field="*{expense}">
+                        </div>
+                        <div class="income incomeTd incomeInput">
+                            <input type="number" th:field="*{income}">
+                        </div>
+                        <div class="large largeTd largeInput">
+                            <input type="text" th:field="*{major}">
+                        </div>
+                        <div class="small smallTd smallInput">
+                            <input type="text" th:field="*{sub}">
+                        </div>
+                        <div class="way wayTd wayInput">
+                            <select name="way" id="bankway">
+                                <option>은행선택</option>
+                                <option th:each="way : ${state.assets}" th:if="${not way.type.equals('credit')}" th:value="${way.name}" th:text="${way.name}"></option>
+                            </select>
+                        </div>
+                    </div>
                     <div class="detail_list">
-                        <ul>
-                            <li>
 
-                            </li>
-                        </ul>
                     </div>
                 </div>
 
@@ -187,6 +208,9 @@
                         <div>내역</div>
                         <div>지출<b class="text-danger expense_simbol">-</b></div>
                         <div>결제방법</div>
+                    </div>
+                    <div class="detail_write">
+
                     </div>
                     <div class="detail_list">
 
@@ -492,75 +516,9 @@
     <div id="foot_wrap">
         <footer></footer>
     </div>
-
-<!--작성-->
-<div id="write_modal">
-    <div id="write_bg"></div>
-    <div id="detail_write">
-        <form name="loansFm" id="loansFm" method="post" action="/loansKeep">
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-            <input type="hidden" name="year">
-            <input type="hidden" name="month">
-            <div class="allW date_input"> <!--날짜-->
-                <input type="number" th:field="*{date}">
-            </div>
-            <div class="detail_input cash_write credit_write credit_dvdWrite noneAttr"><!--내역-->
-                <input type="text" th:field="*{detail}">
-            </div>
-            <div class="expense_write cash_write credit_write credit_dvdWrite noneAttr"><!--지출 수입-->
-                지출
-                <input type="number" th:field="*{expense}">
-            </div>
-            <div class="income_write cash_write credit_write credit_dvdWrite noneAttr"><!--지출 수입-->
-                수입
-                <input type="number" th:field="*{income}">
-            </div>
-            <div class="major_write cash_write credit_write credit_dvdWrite noneAttr"><!--분류1-->
-                <input type="text">
-            </div>
-            <div class="sub_write cash_write credit_write credit_dvdWrite noneAttr"><!--분류2-->
-                <input type="text">
-            </div>
-            <div class="payment_write credit_write credit_dvdWrite noneAttr"><!--카드사-->
-                <input type="text">
-            </div>
-            <div class="installment_write  credit_dvdWrite noneAttr"><!--분할-->
-                <input type="number">
-            </div>
-            <div class="remain_write loans_write credit_dvdWrite noneAttr"><!--남은 금액-->
-                <input type="number">
-            </div>
-            <div class="total_write credit_dvdWrite noneAttr"><!--총금액-->
-                <input type="number">
-            </div>
-            <div class="financial_write loans_write noneAttr"><!-- 금융사 -->
-                <input type="text">
-            </div>
-            <div class="repayment_write loans_write noneAttr"><!-- 결제금 -->
-                <input type="number">
-            </div>
-            <div class="count_write loans_write noneAttr"><!--회차-->
-                <input type="number">
-            </div>
-            <div class="withdraw_write loans_write noneAttr"><!--출금계좌-->
-                <input type="text">
-            </div>
-
-            <div class="payment detail_input">
-                <select name="way" id="bankway">
-                    <option>은행선택</option>
-                    <option th:each="way : ${state.assets}" th:if="${not way.type.equals('credit')}" th:value="${way.name}" th:text="${way.name}"></option>
-                </select>
-            </div>
-        </form>
-    </div>
-</div>
-<!-- 작성 end-->
-
-
 </body>
 </html>
-<script src="./js/main.js"></script>
+
 <script>
 
    
