--- a/eternal/index.html
+++ b/eternal/index.html
@@ -50,10 +50,12 @@
                     <div class="detail_list">
                         <ul class="detail_list_frame">
                             <li>
-                                <span class="date date_list">11일</span>
-                                <b class="detail detail_list">마트</b>
-                                <b class="fluctuate fluctuate_list rednum"><b class="text-danger">-</b>25,500</b>
-                                <span class="payment payment_list">우리</span>
+                                <a href="">
+                                    <span class="date date_list">11일</span>
+                                    <b class="detail detail_list">마트</b>
+                                    <b class="fluctuate fluctuate_list rednum"><sup class="text-danger">-</sup>25,500</b>
+                                    <span class="payment payment_list">우리</span>
+                                </a>
                             </li>
                             <li>
                                 <span class="date date_list">11일</span>
