--- a/eternal/index.html
+++ b/eternal/index.html
@@ -38,7 +38,6 @@
         <div id="calendarBox">
             <div class="calendarLeft">
                 <h3 id="cashCheck">현금.체크카드.계좌</h3>
-                
                 <div class="detail_box cash_check">
                     <div class="detail_head">
                         <div class="date">일자</div>
@@ -50,12 +49,10 @@
                     <div class="detail_list">
                         <ul class="detail_list_frame">
                             <li>
-                                <a href="">
-                                    <span class="date date_list">11일</span>
-                                    <b class="detail detail_list">마트</b>
-                                    <b class="fluctuate fluctuate_list rednum"><sup class="text-danger">-</sup>25,500</b>
-                                    <span class="payment payment_list">우리</span>
-                                </a>
+                                <span class="date date_list">11일</span>
+                                <b class="detail detail_list"><a href="javascript:detail();">마트</a></b>
+                                <b class="fluctuate fluctuate_list rednum"><sup class="text-danger">-</sup>25,500</b>
+                                <span class="payment payment_list">우리</span>
                             </li>
                             <li>
                                 <span class="date date_list">11일</span>
