--- a/eternal/index.html
+++ b/eternal/index.html
@@ -48,9 +48,9 @@
                     
                     <div class="detail_list">
                         <ul class="detail_list_frame">
-                            <li>
+                            <li onclick="detail()">
                                 <span class="date date_list">11일</span>
-                                <b class="detail detail_list"><a href="javascript:detail();">마트</a></b>
+                                <b class="detail detail_list">마트</b>
                                 <b class="fluctuate fluctuate_list rednum"><sup class="text-danger">-</sup>25,500</b>
                                 <span class="payment payment_list">우리</span>
                             </li>
