--- a/eternal/index.html
+++ b/eternal/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
    
     <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
@@ -23,7 +24,8 @@
                 </div>
 
                 <div class="menu">
-                    <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                    <div class="menu_icon"><i class="bi bi-grid-1x2-fill"></i></div>
+                    <div class="btn-group menu_btn" role="group" aria-label="Basic mixed styles example">
                         <button type="button" class="btn btn-warning" onclick="javascript:location.href='./account.html';">계좌</button>
                         <button type="button" class="btn btn-danger" onclick="javascript:location.href='./loans.html';">대출</button>
                         <button type="button" class="btn btn-success" onclick="javascript:location.href='./stocksAndfunds.html';">주식&펀드</button>
